Tonu sranja: -Css zezanje kao sto vidis -Sredio kategorije (splice je imao bag da brise indexe niza bukvalno, zamenio sa null value -> radi kako treba, ng-change je zahtevao da postoji ng-model u $scope inace prijavljuje exception, tako da postoji sada ali ne sluzi nicemu...) -Sredio Submit da ne radi na Enter zbog mape ako trazis lokaciju i enterujes on bi submitovao instant  -Napravio LostSomething isto kao i FoundSomething, sredio loadovanje mape na tvoj fazon  -Sredio par brljavstina u routingu sto je bilo

--- a/LostAndFound_build/css/styleCss.css
+++ b/LostAndFound_build/css/styleCss.css
@@ -47,3 +47,69 @@
       #target {
         width: 345px;
       }
+
+.yellow{
+
+    color:#F7B733;
+}
+.btn-yellow{
+
+    background:#F7B733;
+}
+.darkgray{
+
+    background:#535353;
+}
+ .white{
+
+     color:whitesmoke;
+ }
+.turquoise{
+
+    color:#4ABDAC;
+}
+.orange{
+
+    color:#E24E42;
+}
+.btn-small-width{
+
+    width: 100px;
+}
+.btn-orange-light{
+
+    background:#E24E42;
+}
+.btn-turquoise-light{
+
+    background:#4ABDAC;
+}
+.btn-orange-dark{
+
+    background:#FF5900;
+}
+.btn-turquoise-dark{
+
+    background:#00A874;
+}
+.navbar {
+
+    border-radius:0px;
+
+    }
+
+.btn {
+
+    border-radius:0px;
+
+}
+
+.well{
+
+    border-radius:0px;
+}
+
+.text-bold{
+
+    font-weight: bold;
+}
