--- a/LostAndFound_build/css/styleCss.css
+++ b/LostAndFound_build/css/styleCss.css
@@ -56,9 +56,15 @@
 
     background:#F7B733;
 }
+.home-div{
+
+}
+.container{
+
+}
 .darkgray{
 
-    background:#535353;
+   background:#414141;
 }
  .white{
 
@@ -66,11 +72,11 @@
  }
 .turquoise{
 
-    color:#4ABDAC;
+    color: #009F95;
 }
 .orange{
 
-    color:#E24E42;
+    color:#FF6A5C;
 }
 .btn-small-width{
 
@@ -78,11 +84,11 @@
 }
 .btn-orange-light{
 
-    background:#E24E42;
+    background:#FF6A5C;
 }
 .btn-turquoise-light{
 
-    background:#4ABDAC;
+    background:#009F95;
 }
 .btn-orange-dark{
 
@@ -113,3 +119,227 @@
 
     font-weight: bold;
 }
+/*.navbar {*/
+    /*background-image: linear-gradient(darkgray, gray , #414141);*/
+
+    /*background-repeat: no-repeat;  border-bottom: 1px solid #178ACC;*/
+    /*box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);*/
+    /*border-radius: 0px;*/
+/*}*/
+
+/*.navbar-default {*/
+    /*background-color:darkgray;*/
+    /*border: none;*/
+/*}*/
+
+/*.navbar-default .navbar-brand,*/
+/*.navbar-default .navbar-brand:hover,*/
+/*.navbar-default .navbar-brand:focus ,*/
+/*.navbar-default .navbar-nav > li > a {*/
+    /*color: #FFF;*/
+/*}*/
+
+/*.navbar-default .navbar-nav > li > a:hover,*/
+/*.navbar-default .navbar-nav > li > a:focus {*/
+    /*color: #FFF;*/
+    /*background-color: darkgray;*/
+/*}*/
+
+/*.navbar-default .navbar-toggle:hover,*/
+/*.navbar-default .navbar-toggle:focus {*/
+    /*background-color:darkgray;*/
+/*}*/
+
+/*.navbar-default .navbar-toggle {*/
+    /*border-color: darkgray;*/
+/*}*/
+
+/*.navbar-default .navbar-toggle .icon-bar {*/
+    /*background-color: darkgray;*/
+/*}*/
+
+
+/*a,*/
+/*a:focus,*/
+/*a:hover {*/
+    /*color: #fff;*/
+/*}*/
+
+/*!* Custom default button *!*/
+/*.btn-default,*/
+/*.btn-default:hover,*/
+/*.btn-default:focus {*/
+    /*color: #333;*/
+    /*text-shadow: none; !* Prevent inheritence from `body` *!*/
+    /*background-color: #fff;*/
+    /*border: 1px solid #fff;*/
+/*}*/
+
+
+/*
+ * Base structure
+ */
+
+html,
+body {
+    /*css for full size background image*/
+    /*background: url(http://p1.pichost.me/i/66/1910819.jpg) no-repeat center center fixed;*/
+    /*-webkit-background-size: cover;*/
+    /*-moz-background-size: cover;*/
+    /*-o-background-size: cover;*/
+    /*background-size: cover;*/
+    background-image: url("http://localhost/untitled1/bckg/dark-hardback.png");
+    background-repeat: repeat;
+
+    height: 100%;
+    background-color: #414141;
+    color: darkslategrey;
+    text-align: center;
+    /*text-shadow: 0 1px 3px rgba(0,0,0,.5);*/
+
+
+}
+.txt_heading{
+    color:white;
+    text-align: center;
+}
+.txt_lg{
+    font-size: 60px;
+}
+.lnf_box{
+    font-size: 30px;
+    padding: 20px;
+}
+.form_padding{
+    padding-right:180px;
+}
+.form_padding_ls{
+    padding-right:150px;
+}
+/* Extra markup and styles for table-esque vertical and horizontal centering */
+.site-wrapper {
+    display: table;
+    width: 100%;
+    height: 100%; /* For at least Firefox */
+    min-height: 100%;
+    -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+    box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+    padding:10px;
+}
+.site-wrapper-inner {
+    display: table-cell;
+    vertical-align: top;
+}
+.cover-container {
+    margin-right: auto;
+    margin-left: auto;
+}
+
+/* Padding for spacing */
+.inner {
+    padding: 30px;
+}
+
+
+/*
+ * Header
+ */
+.masthead-brand {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.masthead-nav > li {
+    display: inline-block;
+}
+.masthead-nav > li + li {
+    margin-left: 20px;
+}
+.masthead-nav > li > a {
+    padding-right: 0;
+    padding-left: 0;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff; /* IE8 proofing */
+    color: rgba(255,255,255,.95);
+    border-bottom: 2px solid transparent;
+}
+.masthead-nav > li > a:hover,
+.masthead-nav > li > a:focus {
+    background-color: transparent;
+    border-bottom-color: #a9a9a9;
+    border-bottom-color: rgba(255,255,255,.25);
+}
+.masthead-nav > .active > a,
+.masthead-nav > .active > a:hover,
+.masthead-nav > .active > a:focus {
+    color: #fff;
+    border-bottom-color: #fff;
+}
+
+/*@media (min-width: 768px) {*/
+    /*.masthead-brand {*/
+        /*float: left;*/
+    /*}*/
+    /*.masthead-nav {*/
+        /*float: right;*/
+    /*}*/
+/*}*/
+
+
+/*
+ * Cover
+ */
+
+/*.cover {*/
+    /*padding: 0 20px;*/
+/*}*/
+/*.cover .btn-lg {*/
+    /*padding: 10px 20px;*/
+    /*font-weight: bold;*/
+/*}*/
+
+
+/*
+ * Footer
+ */
+
+.mastfoot {
+    color: #999; /* IE8 proofing */
+    color: rgba(255,255,255,.5);
+}
+
+
+/*
+ * Affix and center
+ */
+
+/*@media (min-width: 768px) {*/
+    /*!* Pull out the header and footer *!*/
+    /*!*.masthead {*!*/
+        /*!*position: fixed;*!*/
+        /*!*top: 0;*!*/
+    /*!*}*!*/
+    /*.mastfoot {*/
+        /*position: fixed;*/
+        /*bottom: 0;*/
+    /*}*/
+    /*!* Start the vertical centering *!*/
+    /*.site-wrapper-inner {*/
+        /*vertical-align: middle;*/
+    /*}*/
+    /*!* Handle the widths *!*/
+    /*.masthead,*/
+    /*.mastfoot,*/
+    /*.cover-container {*/
+        /*width: 100%; !* Must be percentage or pixels for horizontal alignment *!*/
+    /*}*/
+/*}*/
+
+/*@media (min-width: 992px) {*/
+    /*.masthead,*/
+    /*.mastfoot,*/
+    /*.cover-container {*/
+        /*width: 700px;*/
+    /*}*/
+/*}*/
