--- a/LostAndFound_build/css/styleCss.css
+++ b/LostAndFound_build/css/styleCss.css
@@ -247,13 +247,17 @@ body {
     text-align: center;
     text-shadow: 0 1px 3px rgba(0,0,0,.5);
     padding-bottom:10px;
+    /*margin-left:20px;*/
+
 }
 .left-padding{
-    padding-left:50px;
+    padding-left:90px;
+
 }
 .txt_lg{
     font-size: 70px;
     text-shadow: 0 1px 3px rgba(0,0,0,.5);
+
 }
 .lnf_box{
     font-size: 30px;
