--- a/LostAndFound_build/css/styleCss.css
+++ b/LostAndFound_build/css/styleCss.css
@@ -1,4 +1,19 @@
 .angular-google-map-container { height: 400px; }
+.fa {
+    color:#fff;
+}
+
+#userList {
+    display:none;
+}
+
+#loader {
+    position:absolute;
+    z-index:2;
+    width:100%;
+    text-align:center;
+    top:40%;
+}
 
  #map {
         height: 100%;
@@ -220,8 +235,9 @@ body {
     background-image: url("http://localhost/untitled1/bckg/dark-hardback.png");
     /*background-attachment: fixed; @Veliki scroll lag*/
     background-repeat: repeat;
+
     /*background-position: center;*/
-    height: auto;
+    /*height: 100%;*/
     background-color: #414141;
     color: darkslategrey;
     text-align: center;
